manifests/05_wordpress/wordpress-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo.invaliddomain.de
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: demo.invaliddomain.de
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: http
